<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.AddEditExerciseActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextExerciseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/exercise_name"
        android:inputType="text"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextExerciseObservations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/observations"
        android:inputType="textMultiLine"
        android:layout_below="@id/editTextExerciseName"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSaveExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save2"
        android:layout_below="@id/editTextExerciseObservations"/>

</RelativeLayout>